// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogList /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly authenticated with blogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Add a new blog"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledFeatureCard-sc-if7ctk-0 cjldbB"
        href="/create-blog"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              />
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Add a new blog
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
        href="/blog/asdfg"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-fEOsli cxlOAH blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
        type="button"
      >
        <span
          class="sc-idiyUo uBacl"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-fEOsli cxlOAH blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
        type="button"
      >
        <span
          class="sc-idiyUo uBacl"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
        href="/blog/mndyd8"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-fEOsli fxKgij blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
        disabled=""
        type="button"
      >
        <span
          class="sc-idiyUo uBacl"
        >
          Delete blog
        </span>
      </button>
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blog load error 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jqUVSM leXYdV"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl hldXbV"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/asdfg"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/mndyd8"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-evZas cgLOYZ"
    >
      <div
        class="sc-breuTD cvMWpe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with ssrBlogs 1`] = `
<div>
  <div
    class="sc-iAvgwm laZEaZ page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/asdfg"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-dmRaPn krquvp sc-bZkfAO fmdlBy blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
        href="/blog/mndyd8"
      >
        <div
          class="sc-kgflAQ iUivCr"
        >
          <div
            class="sc-fLlhyt QObzS"
          />
          <div
            class="sc-bBrHrO eZLFnt"
          >
            <div
              aria-hidden="true"
              class="sc-kLLXSd eRAXuc"
            >
              <div
                class="sc-ikZpkk fatBSM date container"
              >
                <div
                  class="sc-gXmSlM dYcsfF"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-cCsOjp BhucZ"
                >
                  <span
                    class="sc-eCYdqJ jKKFkO"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-jIZahH khISa-d"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-jdAMXn dlquzw"
                >
                  <div
                    class="sc-bZnhIo"
                  >
                    <span
                      class="sc-iTONeN Olitm"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-himrzO hRjkoo"
              >
                <div
                  class="sc-ivTmOn lGvzm sc-ciZhAO kLOiRq"
                >
                  <style>
                    .js .gg-image__img--hide {opacity: 0;}
                  </style>
                  <div
                    class="sc-cxabCf juikne"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="sc-llJcti bRZEYR"
                    >
                      <div
                        class="sc-evZas ctHunJ sc-iIPllB hGiVly"
                      >
                        <div
                          class="sc-breuTD cvMWpe"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="sc-gicCDI EQhvh  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-ezWOiH eYgWtG  gg-image__img--hide"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 gOCDiS"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 ddrRBh"
    />
    <div
      class="sc-jqUVSM leXYdV creative-commonssyles__Inner-sc-qff226-2 gkGslB"
    >
      <h1
        class="sc-dkzDqf ddFalQ sc-crXcEl ioFrJl"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-ksZaOG cQKWUS"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-iBkjds kXOvCG"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-ftvSup kUuEWK"
          >
            <svg
              class="sc-gKXOVf ktoyia sc-papXJ fmVkXn"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-iBkjds kXOvCG"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
